<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText 
        android:id="@+id/original_price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/original_price"
        android:inputType="numberDecimal"
        android:imeOptions="actionSend"/>
    
    <EditText 
        android:id="@+id/discount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/discount"
        android:inputType="number"/>

    <Button
        android:id="@+id/calculate_savings"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:onClick="calculateSavings"
        android:text="@string/calculate"/>
    
    <TextView 
        android:id="@+id/final_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/final_price"/>
    
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop = "4dp"
        android:gravity="center"/>
    
    <TextView 
        android:id="@+id/savings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/savings"
        android:layout_marginTop="4dp"/>
    
    <TextView 
        android:id="@+id/saved_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:textSize="25sp"/>

</LinearLayout>
